CORS/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
  namespace: prod
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "myapp.prod.svc.cluster.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: myapp
  namespace: prod
spec:
  host: myapp.prod.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
  namespace: prod
spec:
  hosts:
  - "myapp.prod.svc.cluster.local"
  gateways:
  - app-gateway
  http:
    - route:
      - destination:
          host: myapp.prod.svc.cluster.local
          subset: v1
        weight: 50
      - destination:
          host: myapp.prod.svc.cluster.local
          subset: v2
        weight: 50
      corsPolicy:
        allowOrigin:
        - http://istio.io
        allowOrigins:
        - exact: http://istio.io
        allowMethods:
        - POST
        - GET
        allowCredentials: true
        allowHeaders:
        - foo
        - bar
        maxAge: "24h"
---
